# blub

./: .clang-format  .gitignore  CMakeLists.txt  filereader.cpp  filereader.h  greeting.h  main.cpp  makefile  scratch-grammar.txt  testinput
examples/: 00_helloworld.blub  00_simplesthelloworld.blub  01_binops.blub  02_variables.blub  03_struct.blub  03_types.blub  04_types.blub  05_references.blub  06_booleans.blub  07_functions.blub  llvm_instruction.blub  ocean-fft.blub  overload.blub  raylib.blub
lib/: string.blub
src/: cimport.cpp  cimport.h  common.cpp  common.h  environment.cpp  environment.h  filereader.cpp  filereader.h  greeting.cpp  interpreter.h  llvm_comp.h  logging.cpp  logging.h  main.cpp  parser.cpp  parser.h  tokenizer.cpp  tokenizer.h  types.cpp  types.h  value.cpp  value.h
src/interpreter/: value.cpp  value.h
src/parser/: parser.h
